@@ -8,7 +8,10 @@ TESTS_ENVIRONMENT = \
 ## Test programs to be run
 TESTS = smoketest.tcl
 
-EXTRA_DIST = tcl.i except.i $(TESTS) $(BUILT_SOURCES) run-tcl-test runtest.tcl
+EXTRA_DIST = tcl.i except.i \
+	generate-tcl-exceptions \
+	run-tcl-test runtest.tcl \
+	$(TESTS) $(BUILT_SOURCES)
 
 tcllibdir = @TCL_LIB@/xapian@VERSION@
 
@@ -36,7 +39,11 @@ xapian_la_LIBADD = $(XAPIAN_LIBS) $(TCL_LIBS)
 BUILT_SOURCES = xapian_wrap.cc
 
 if MAINTAINER_MODE
-xapian_wrap.cc:
+BUILT_SOURCES += except.i
+except.i: $(srcdir)/generate-tcl-exceptions ../../xapian-core/exception_data.pm
+	$(PERL) -w -I$(srcdir)/../../xapian-core $(srcdir)/generate-tcl-exceptions
+
+xapian_wrap.cc: except.i
 	$(SWIG) $(SWIG_WERROR) -I'$(srcdir)' $(SWIG_FLAGS) -c++ \
 	    -tcl8 -namespace -pkgversion '@VERSION_NO_SNAPSHOT@' \
 	    -o xapian_wrap.cc -MD -MF xapian_wrap_d.tmp '$(srcdir)/'tcl.i
